<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_edit_name.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/config"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rank_orders_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/fontdiner_swanky"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/rank_config_order_string"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/rankOrderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />

    <TextView
        android:id="@+id/rank_cards_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/fontdiner_swanky"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/rank_config_cards_string"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/rankCardsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/save" />

</LinearLayout>