<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RankingActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/rank_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/rank_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/HighScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:divider="@drawable/divider8p"
        android:showDividers="middle"
        app:layout_constraintTop_toBottomOf="@+id/rank_toolbar">

        <ImageView
            android:id="@+id/burgerScorePic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/food04_french_fries" />

        <TextView
            android:id="@+id/highScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/high_score_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/penguinScorePic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/flag06_ca" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/HighScoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider8p"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HighScoreTitle">

        <LinearLayout
            android:id="@+id/LinearLayoutRanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rankTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_score_rank"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nicknameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_score_names"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutScores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_score_time"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_score_date"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>